[package]
name = "nats-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35.1"
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["cargo", "derive", "env", "unicode", "wrap_help"] }
futures = "0.3.30"
postcard = { version = "1.0.8", features = ["use-std"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
